[gd_scene load_steps=34 format=2]

[ext_resource path="res://scenes/level/_base/_BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://test_folder/test level/checkpoint 1-2/Checkpoint1-2.gd" type="Script" id=2]
[ext_resource path="res://assets/level/tileset/brown/wall5.png" type="Texture" id=3]
[ext_resource path="res://assets/level/tileset/brown/wall4.png" type="Texture" id=4]
[ext_resource path="res://assets/level/tileset/brown/ground.png" type="Texture" id=5]
[ext_resource path="res://assets/level/tileset/brown/wall2.png" type="Texture" id=6]
[ext_resource path="res://assets/level/tileset/brown/wall_inner.png" type="Texture" id=7]
[ext_resource path="res://assets/level/tileset/brown/wall1.png" type="Texture" id=8]
[ext_resource path="res://assets/level/tileset/brown/wall3.png" type="Texture" id=9]
[ext_resource path="res://scenes/level/tileset/TileMapBrown.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/level/hint/Hint.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/level/bot station/BotStation.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/level/vault/Vault.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/level/depot/Depot.tscn" type="PackedScene" id=14]
[ext_resource path="res://test_folder/test level/checkpoint 1-2/Hint.gd" type="Script" id=15]
[ext_resource path="res://scenes/weapons/blaster/AutoBlaster.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/passives/speed/SpeedII.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/passives/charge force/ChargeForceI.tscn" type="PackedScene" id=18]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 ) ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( -16, 8, 16, 8, 16, 16, -16, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -16, 8, 16, 8, 16, 16, -16, 16 ) ]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( -16, -16, 16, -16, 16, 1, -16, 1 )

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 8, 8, 8, -16, 16, -16, 16, 16, -16, 16, -16, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 3, 4, 5 ) ]
outlines = [ PoolVector2Array( -16, 8, -16, 16, 16, 16, 16, -16, 8, -16, 8, 8 ) ]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( -16, -16, 1, -16, 1, 1, -16, 1 )

[sub_resource type="NavigationPolygon" id=7]
vertices = PoolVector2Array( 16, 16, 8, 16, 8, 8, 16, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 16, 8, 8, 8, 8, 16, 16, 16 ) ]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 1, 16, -16, 16, -16, -16, 1, 1 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 1, 1, -16, -16, 16, -16, 16, 1 )

[sub_resource type="NavigationPolygon" id=10]
vertices = PoolVector2Array( -16, -16, 16, -16, 16, -9, -9, 16, -16, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ) ]
outlines = [ PoolVector2Array( -16, 16, -9, 16, 16, -9, 16, -16, -16, -16 ) ]

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( -1, 16, 16, -1, 16, 16 )

[sub_resource type="NavigationPolygon" id=12]
vertices = PoolVector2Array( -16, -16, -9, -16, -16, -9 )
polygons = [ PoolIntArray( 0, 1, 2 ) ]
outlines = [ PoolVector2Array( -16, -16, -9, -16, -16, -9 ) ]

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( -16, -1, -1, -16, 16, -16, 16, 16, -16, 16 )

[sub_resource type="TileSet" id=14]
resource_local_to_scene = true
0/name = "Ground"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 16, 16 )
0/navigation_offset = Vector2( 16, 16 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "InnerWall"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 16, 16 )
1/navigation_offset = Vector2( 16, 16 )
1/shape_offset = Vector2( 16, 16 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
1/z_index = 0
2/name = "Wall1"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 16, 16 )
2/navigation_offset = Vector2( 16, 16 )
2/navigation = SubResource( 3 )
2/shape_offset = Vector2( 16, 16 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
2/z_index = 0
3/name = "Wall2"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 16, 16 )
3/navigation_offset = Vector2( 16, 16 )
3/navigation = SubResource( 5 )
3/shape_offset = Vector2( 16, 16 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
3/z_index = 0
4/name = "Wall3"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 16, 16 )
4/navigation_offset = Vector2( 16, 16 )
4/navigation = SubResource( 7 )
4/shape_offset = Vector2( 16, 16 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
4/shape = SubResource( 8 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
4/z_index = 0
5/name = "Wall4"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 16, 16 )
5/navigation_offset = Vector2( 16, 16 )
5/navigation = SubResource( 10 )
5/shape_offset = Vector2( 16, 16 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
5/shape = SubResource( 11 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
5/z_index = 0
6/name = "Wall5"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 16, 16 )
6/navigation_offset = Vector2( 16, 16 )
6/navigation = SubResource( 12 )
6/shape_offset = Vector2( 16, 16 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 16, 16 )
6/shape = SubResource( 13 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 16, 16 )
} ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 114, 11 )

[node name="Checkpoint1-2" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TileMap" parent="Nav" index="0" instance=ExtResource( 10 )]
tile_set = SubResource( 14 )
tile_data = PoolIntArray( -786435, -1073741823, 0, -786434, -1073741823, 0, -786433, -1073741823, 0, -851968, -1073741823, 0, -851967, -1073741823, 0, -851966, -1073741823, 0, -851965, -1073741823, 0, -720899, -1073741823, 0, -720898, -1073741823, 0, -720897, -1073741823, 0, -786432, -1073741823, 0, -786431, -1073741823, 0, -786430, -1073741823, 0, -786429, -1073741823, 0, -655363, -1073741823, 0, -655362, -1073741823, 0, -655361, -1073741822, 0, -720896, -1073741824, 0, -720895, -1610612734, 0, -720894, -1073741823, 0, -720893, -1073741823, 0, -589827, -1073741823, 0, -589826, -1073741823, 0, -589825, -1073741822, 0, -655360, -1073741824, 0, -655359, -1610612734, 0, -655358, -1073741823, 0, -655357, -1073741823, 0, -524291, -1073741823, 0, -524290, -1073741823, 0, -524289, -1073741822, 0, -589824, -1073741824, 0, -589823, -1610612734, 0, -589822, -1073741823, 0, -589821, -1073741823, 0, -458755, 1, 0, -458754, -1073741823, 0, -458753, -1073741822, 0, -524288, -1073741824, 0, -524287, -1610612734, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -393219, -1073741823, 0, -393218, -1073741823, 0, -393217, -1073741822, 0, -458752, -1610612736, 0, -458751, -1610612734, 0, -458750, -1073741823, 0, -458749, -1073741823, 0, -458748, -1073741823, 0, -458747, -1073741823, 0, -458746, -1073741823, 0, -458745, -1073741823, 0, -458744, -1073741823, 0, -327683, -1073741823, 0, -327682, -1073741823, 0, -327681, -1073741822, 0, -393216, -1610612736, 0, -393215, -1610612734, 0, -393214, -1610612735, 0, -393213, -1610612735, 0, -393212, -1610612735, 0, -393211, -1073741823, 0, -393210, -1073741823, 0, -393209, -1073741823, 0, -393208, -1073741823, 0, -262147, -1073741823, 0, -262146, -1073741823, 0, -262145, -1073741822, 0, -327680, -1610612736, 0, -327679, -1610612734, 0, -327678, -1610612735, 0, -327677, -1610612735, 0, -327676, -1610612735, 0, -327675, -1073741823, 0, -327674, -1073741823, 0, -327673, -1073741823, 0, -327672, -1073741823, 0, -196611, -1073741823, 0, -196610, -1073741823, 0, -196609, -1073741822, 0, -262144, -1610612736, 0, -262143, -1610612734, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, -1073741823, 0, -262138, -1073741823, 0, -262137, -1073741823, 0, -262136, -1073741823, 0, -131075, -1073741823, 0, -131074, -1073741823, 0, -131073, -1073741822, 0, -196608, -1610612736, 0, -196607, -1610612734, 0, -196606, 4, 0, -196605, 2, 0, -196604, -1610612732, 0, -196603, -1073741823, 0, -196602, -1073741823, 0, -196601, -1073741823, 0, -196600, -1073741823, 0, -65539, -1073741823, 0, -65538, -1073741823, 0, -65537, -1073741822, 0, -131072, -1610612736, 0, -131071, -1610612734, 0, -131070, -1073741822, 0, -131069, -1610612736, 0, -131068, -1610612734, 0, -131067, -1073741823, 0, -131066, -1073741823, 0, -131065, -1073741823, 0, -131064, 1, 0, -3, -1073741823, 0, -2, -1073741823, 0, -1, -1073741822, 0, -65536, -1610612736, 0, -65535, -1610612733, 0, -65534, 3, 0, -65533, -1610612736, 0, -65532, -1610612733, 0, -65531, 2, 0, -65530, -1610612732, 0, -65529, 1, 0, -65528, 1, 0, 65533, -1073741823, 0, 65534, -1073741823, 0, 65535, -1073741822, 0, 0, -1610612736, 0, 1, -1610612736, 0, 2, -1610612736, 0, 3, -1610612736, 0, 4, -1610612736, 0, 5, -1610612736, 0, 6, -1610612734, 0, 7, 1, 0, 8, 1, 0, 131069, -1073741823, 0, 131070, -1073741823, 0, 131071, -1073741822, 0, 65536, -1610612736, 0, 65537, 1610612739, 0, 65538, -1073741821, 0, 65539, -1610612736, 0, 65540, 1610612739, 0, 65541, 1610612738, 0, 65542, 1610612740, 0, 65543, 1, 0, 65544, -1073741823, 0, 196605, -1073741823, 0, 196606, -1073741823, 0, 196607, -1073741822, 0, 131072, -1610612736, 0, 131073, -1610612734, 0, 131074, -1073741822, 0, 131075, -1610612736, 0, 131076, -1610612734, 0, 131077, 1610612737, 0, 131078, 1610612737, 0, 131079, 1610612737, 0, 131080, -1073741823, 0, 262141, -1073741823, 0, 262142, -1073741823, 0, 262143, -1073741822, 0, 196608, -1610612736, 0, 196609, -1610612734, 0, 196610, -1073741820, 0, 196611, 1610612738, 0, 196612, 1610612740, 0, 196613, 1610612737, 0, 196614, 1610612737, 0, 196615, 1610612737, 0, 196616, -1073741823, 0, 327677, -1073741823, 0, 327678, -1073741823, 0, 327679, -1073741822, 0, 262144, -1610612736, 0, 262145, -1610612734, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1610612737, 0, 262150, 1610612737, 0, 262151, 1610612737, 0, 262152, -1073741823, 0, 393213, -1073741823, 0, 393214, -1073741823, 0, 393215, -1073741822, 0, 327680, -1610612736, 0, 327681, -1610612734, 0, 327682, -1073741823, 0, 327683, -1073741823, 0, 327684, -1073741823, 0, 327685, 1610612737, 0, 327686, 1610612737, 0, 327687, 1610612737, 0, 327688, -1073741823, 0, 458749, -1073741823, 0, 458750, -1073741823, 0, 458751, -1073741822, 0, 393216, -1610612736, 0, 393217, -1610612734, 0, 393218, -1610612735, 0, 393219, -1610612735, 0, 393220, -1610612735, 0, 393221, -1610612735, 0, 393222, -1610612735, 0, 393223, -1610612735, 0, 393224, -1073741823, 0, 524285, -1073741823, 0, 524286, -1073741823, 0, 524287, -1073741822, 0, 458752, -1610612736, 0, 458753, -1610612734, 0, 458754, -1610612735, 0, 458755, -1610612735, 0, 458756, -1610612735, 0, 458757, -1610612735, 0, 458758, -1610612735, 0, 458759, -1610612735, 0, 458760, -1073741823, 0, 589821, 1, 0, 589822, 1, 0, 589823, -1073741822, 0, 524288, -1610612736, 0, 524289, -1610612734, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 655357, -1073741823, 0, 655358, -1073741823, 0, 655359, -1073741822, 0, 589824, -1610612736, 0, 589825, -1610612734, 0, 589826, -1073741823, 0, 589827, -1073741823, 0, 720893, -1073741823, 0, 720894, -1073741823, 0, 720895, -1073741822, 0, 655360, -1610612736, 0, 655361, -1610612734, 0, 655362, -1073741823, 0, 655363, -1073741823, 0, 786429, -1073741823, 0, 786430, -1073741823, 0, 786431, -1073741822, 0, 720896, -1610612736, 0, 720897, -1610612734, 0, 720898, -1073741823, 0, 720899, -1073741823, 0, 851965, -1073741823, 0, 851966, -1073741823, 0, 851967, -1073741823, 0, 786432, -1073741823, 0, 786433, -1073741823, 0, 786434, -1073741823, 0, 786435, -1073741823, 0, 917501, -1073741823, 0, 917502, -1073741823, 0, 917503, -1073741823, 0, 851968, -1073741823, 0, 851969, -1073741823, 0, 851970, -1073741823, 0, 851971, -1073741823, 0 )

[node name="PlayerPos1" type="Position2D" parent="Access" index="0"]
position = Vector2( 60.7551, 801.509 )

[node name="PlayerPos2" type="Position2D" parent="Access" index="1"]
position = Vector2( 69.4899, -610.835 )

[node name="Hint" parent="Access" index="2" instance=ExtResource( 11 )]
position = Vector2( 203, 65 )
script = ExtResource( 15 )

[node name="Label" parent="Access/Hint/AccessUI" index="0"]
margin_top = 450.0
margin_right = 605.0
margin_bottom = 650.0
bbcode_enabled = true
bbcode_text = "Press TAB to open inventory.
Stand in one of the logos to gain access of it's funtionalities and containers.
[color=#00ff10]Bot Station:[/color] Autorepairs and allows you to customize your loadout.
[color=#ff8b0f]Depot:[/color] Get new equipment here.
[color=#04ecfe]Vault:[/color] Store your items here. Bounty rewards are also sent here."
text = "Press TAB to open inventory.
Stand in one of the logos to gain access of it's funtionalities and containers.
Bot Station: Autorepairs and allows you to customize your loadout.
Depot: Get new equipment here.
Vault: Store your items here. Bounty rewards are also sent here."

[node name="Label2" parent="Access/Hint/AccessUI" index="1"]
visible = false
text = ""

[node name="BotStation" parent="Access" index="3" instance=ExtResource( 12 )]
position = Vector2( 447, -189 )

[node name="Vault" parent="Access" index="4" instance=ExtResource( 13 )]
position = Vector2( 448, 323 )

[node name="Depot" parent="Access" index="5" instance=ExtResource( 14 )]
position = Vector2( 696, 66 )

[node name="AutoBlaster" parent="Access/Depot/Items" index="0" instance=ExtResource( 16 )]

[node name="AutoBlaster2" parent="Access/Depot/Items" index="1" instance=ExtResource( 16 )]

[node name="SpeedII" parent="Access/Depot/Items" index="2" instance=ExtResource( 17 )]

[node name="SpeedII2" parent="Access/Depot/Items" index="3" instance=ExtResource( 17 )]

[node name="ChargeForceI" parent="Access/Depot/Items" index="4" instance=ExtResource( 18 )]

[node name="ToLvl1" type="Area2D" parent="." index="4"]
position = Vector2( 63.2378, 1093.52 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToLvl1" index="0"]
shape = SubResource( 15 )

[node name="ToEnd" type="Area2D" parent="." index="5"]
position = Vector2( 1, -1898 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToEnd" index="0"]
position = Vector2( 64, 1013 )
shape = SubResource( 15 )
[connection signal="body_entered" from="ToLvl1" to="." method="_on_ToLvl1_body_entered"]
[connection signal="body_entered" from="ToEnd" to="." method="_on_ToEnd_body_entered"]

[editable path="Access/Hint"]

[editable path="Access/Depot"]
